# fastapi-cicd

./: .gitignore  .gitlab-ci.yml  README.md  main.py  pyproject.toml  test.py
before_start/: check_version.py
common_logger/: logger_config.py
core/: config.py
tests/: async_test.py
